fixed styling issues on small screen

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 .logo {
-display: none;
+  display: none;
 }
 
 .alternate_nav {
@@ -420,7 +420,7 @@ nav {
   font-weight: bold;
 }
 
-.article > a > img {
+.article-news-pic {
   width: 100%;
 }
 
@@ -473,10 +473,10 @@ main .heading {
 }
 
 .founding-rounds-website {
-    font-size: 15px;
-    font-weight: lighter;
-    text-align: justify;
-    margin-right: 2cm;
+  font-size: 15px;
+  font-weight: lighter;
+  text-align: justify;
+  margin-right: 2cm;
 }
 
 @media (max-width: 1024px) {
@@ -486,7 +486,7 @@ main .heading {
     flex: 15%;
   }
 
-  .nav{
+  .nav {
     flex: 85%;
   }
 
@@ -526,11 +526,7 @@ main .heading {
   }
 
   .images-header-title-aside {
-    position: absolute;
-    color: white;
     font-size: 1.4rem;
-    top: 100px;
-    left: 10px;
   }
 
   .footer-icons-buttons {
@@ -624,200 +620,272 @@ main .heading {
 }
 
 @media (max-width: 768px) {
-
   .logo {
     display: unset;
-    height: 9vw;
-    width: 10vh;
-
+    height: 7.5vw;
+    width: 14vh;
   }
 
   .alternate_nav {
-    margin-top: 0;
-    margin-bottom: 3vh;
+    font-size: 1.7rem;
+    margin-top: 15px;
     display: unset;
-    float:right;
+    float: right;
     top: 0;
-    color: black;
+    color: grey;
     margin-right: 4vw;
+    /* border: 1px solid gray; */
   }
+
+  .alternate_nav:nth-of-type(1) {
+    color: orangered;
+  }
+
   .nav1 {
     display: none;
   }
   .nav2 {
     display: none;
   }
+
   .images-header {
-    margin-top: 4vh;
-  flex-direction: column;
-}
-.latest-news-section {
-  display:grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 12% 12% 12% 12% 12% 12% 12% 12%;
-  margin-left: 0;
-  margin-right: 0;
-  width: 100%;
-}
-.latest-news-pic {
-width: 14%;
-height: 45%;
-}
-.article-description {
-  font-size: 2.5vw;
-  float: right;
-  margin-right: 3vw;
-}
+    height: auto;
+    margin-top: 11vh;
+    display: inline-block;
+  }
 
-.timeline {
-  font-size: 12px;
-  float:right;
-  margin-right: 16vw;
-}
+  .images-header-title {
+    position: static;
+    margin-left: 10px;
+    margin-right: 10px;
+    color: white;
+    font-size: 2.2rem;
+    font-weight: bolder;
+    margin-top: 180px;
+  }
 
-main .heading {
-  margin-right: 0;
-  margin-left: 0;
-}
-.latest-funding-aside {
-  margin-right: 0;
-  margin-left: 0;
-  float: none;
-}
+  .images-header-side {
+    flex: 1fr;
+  }
 
-.latest-fund-pic {
-display: flex;
-flex-direction: column;
-row-gap: 2vh;
-width: 100%;
-margin-left: 0;
-margin-right: 0;
-}
+  .images-header-title-aside {
+    font-size: 2.2rem;
+    font-weight: bolder;
+    top: 170px;
+    left: 10px;
+  }
 
-.company-founding-round-img {
-height: 20%;
-  width: 98%; 
-}
- 
-.lines {
-width: 100%;
- }
+  .latest-news-section {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 12% 12% 12% 12% 12% 12% 12% 12%;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+  }
+  .latest-news-pic {
+    width: 14%;
+    height: 45%;
+  }
+  .article-description {
+    grid-area: title;
+    display: inline-block;
+    font-size: 2.5vw;
+    float: right;
+    margin-right: 3vw;
+  }
 
- .founding-rounds-website {
-  width:100%;
-  font-size: 15px; 
-  text-align: center;
-  margin-right: 0;
-}
+  .article .timeline{
+    grid-area: timeline;
+  }
 
-.utility-section {
-  display: grid;
-  margin-right: 0;
-  margin-left: 0;
-  grid-template-columns: 100%;
+  .timeline {
+    font-size: 12px;
+    float: right;
+    margin-right: 16vw;
+  }
 
-  grid-template-areas:
-    "utility1"
-    "utility2" 
-    "utility3"
-    "utility4"
-    "utility5"
-    "utility6"
-    "utility7"
-    "utility8"
-    "utility9";
-  row-gap: 20px;
-}
+  main .heading {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    margin-right: 0;
+    margin-left: 2vw;
+  }
+  .latest-funding-aside {
+    margin-right: 0;
+    margin-left: 0;
+    float: none;
+  }
 
-.utility1 {
-  font-size: 17px;
-}
+  .latest-fund-pic {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2vh;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
 
-.utility2 {
-  font-size: 17px;
-}
+  .article {
+    display: grid;
+    grid-template-areas: "pic title"
+    "pic timeline";
+    grid-template-columns: 10% 90%;
+    column-gap: 10px;
+    margin-left: 1vw;
+    margin-right: 1vw;
 
-.utility3 {
-  font-size: 17px;
-}
+  }
 
-.utility4 {
-  font-size: 17px;
-}
+  .article>a{
+    grid-area: pic;
+  }
 
-.utility5 {
-  font-size: 17px;
-}
+  .latest-news-pic{
+    /* grid-row: 1/2;
+    grid-column: 1/3; */
+    margin-top: 2px;
+    height: 90%;
+    width: 100%;
 
-.utility6 {
-  font-size: 17px;
-}
+  }
 
-.utility7 {
-  font-size: 17px;
-}
+  .company-founding-round-img {
+    height: 20%;
+    width: 98%;
+  }
 
-.utility8 {
-  font-size: 17px;
-}
+  .lines {
+    width: 100%;
+  }
 
-.utility9 {
-  font-size: 17px;
-}
+  .founding-rounds-website {
+    width: 100%;
+    font-size: 15px;
+    text-align: center;
+    margin-right: 0;
+  }
 
-.utility-ul-links {
-  text-decoration: none;
-  color: #666;
-  font-size: 1.5vh;
-}
+  .utility-section {
+    display: grid;
+    margin-right: 0;
+    margin-left: 0;
+    grid-template-columns: 100%;
 
-.latest-deals-body {
-  display: grid;
-  grid-template-areas:
-    "deal1"
-    "deal2"
-    "deal3"
-    "deal4"
-    "deal5"
-    "deal6"
-    "deal7"
-    "deal8";
-  grid-template-columns: 100%;
-  row-gap: 10px;
-}
+    grid-template-areas:
+      "utility1"
+      "utility2"
+      "utility3"
+      "utility4"
+      "utility5"
+      "utility6"
+      "utility7"
+      "utility8"
+      "utility9";
+    row-gap: 20px;
+  }
 
-.latest-deals-image {
-  width: 10vw;
-  height: 7vh;
-}
+  .utility1 {
+    font-size: 17px;
+  }
 
-.latest-deal-title {
-  margin-right: 0;
-  font-size: 1.6vh;
-  float: right;
-}
+  .utility2 {
+    font-size: 17px;
+  }
 
-.deal-price-discount {
-  float: right;
-  font-size: 12px;
-  margin-right: 20vw;
-}
+  .utility3 {
+    font-size: 17px;
+  }
 
-.deal-price {
-  float: right;
-  font-size: 12px;
-}
+  .utility4 {
+    font-size: 17px;
+  }
 
-.footer2-text {
-  width: 100%;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  font-size: 18px;
-  
-}
+  .utility5 {
+    font-size: 17px;
+  }
 
+  .utility6 {
+    font-size: 17px;
+  }
 
-.ninja-small{
-  display: none;
-}
+  .utility7 {
+    font-size: 17px;
+  }
+
+  .utility8 {
+    font-size: 17px;
+  }
+
+  .utility9 {
+    font-size: 17px;
+  }
+
+  .utility-ul-links {
+    text-decoration: none;
+    color: #666;
+    font-size: 1.5vh;
+  }
+
+  .latest-deals-body {
+    display: grid;
+    grid-template-areas:
+      "deal1"
+      "deal2"
+      "deal3"
+      "deal4"
+      "deal5"
+      "deal6"
+      "deal7"
+      "deal8";
+    grid-template-columns: 100%;
+    row-gap: 10px;
+  }
+
+  .latest-deals-image {
+    width: 10vw;
+    height: 7vh;
+  }
+
+  .latest-deal-title {
+    margin-right: 0;
+    font-size: 1.6vh;
+    float: right;
+  }
+
+  .deal-price-discount {
+    float: right;
+    font-size: 12px;
+    margin-right: 20vw;
+  }
+
+  .deal-price {
+    float: right;
+    font-size: 12px;
+  }
+
+  .footer2-text {
+    width: 100%;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    font-size: 18px;
+  }
+
+  .small-screen-nav {
+    background-color: white;
+    box-shadow: 7px 6px 5px 0px rgb(179, 177, 177);
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    left: 0;
+  }
+
+  .small-screen-nav-right {
+    float: right;
+  }
+
+  .ninja-small {
+    display: none;
+  }
 }
